style contact page

--- a/html/contact.html
+++ b/html/contact.html
@@ -122,19 +122,26 @@
         </div>
       </div>
       <div class="contact-page other-page">
-        <div class="container">
-          <h1 class="title">contact us</h1>
-          <ul class="row">
-            <li class="col-md-4">
-              <h3 class="sub-title">Contact Details</h3><span class="content-title">Phone</span><span class="content">(02) 9597 6788</span><span class="content-title">Fax</span><span class="content">(02) 9597 6273</span><span class="content-title">Email</span><span class="content">info@patragroup.com.au</span>
-            </li>
-            <li class="col-md-4">
-              <h3 class="sub-title">Address</h3><span class="content-title">WAREHOUSE</span><span class="content">4/450-464 W Botany St Rockdale NSW 2216</span><span class="content-title">MAILING</span><span class="content">P.O. Box 815 Rockdale NSW 2216</span>
-            </li>
-            <li class="col-md-4">
-              <h3 class="sub-title">DIRECT</h3><span class="content-title">Nectarios Kounavis</span><span class="content">email@patragroup.com.au</span><span class="content-title">George Kounavis</span><span class="content">email@patragroup.com.au</span>
-            </li>
-          </ul>
+        <div style="background-image: url('images/map-contact.jpg');" class="map-contact"><a href="#"></a>
+          <!--img(src='images/map-contact.jpg')-->
+        </div>
+        <div class="wrapper-contact bg-blue">
+          <div class="container">
+            <div class="why-choose">
+              <h1 class="title">contact us</h1>
+              <ul class="row">
+                <li class="col-md-4">
+                  <h3 class="sub-title">Contact Details</h3><span class="content-title">Phone</span><a href="tel:0295976788"><span class="content">(02) 9597 6788</span></a><span class="content-title">Fax</span><span class="content">(02) 9597 6273</span><span class="content-title">Email</span><a href="mailto:info@patragroup.com.au"><span class="content">info@patragroup.com.au</span></a>
+                </li>
+                <li class="col-md-4">
+                  <h3 class="sub-title">Address</h3><span class="content-title">WAREHOUSE</span><span class="content">4/450-464 W Botany St Rockdale NSW 2216</span><span class="content-title">MAILING</span><span class="content">P.O. Box 815 Rockdale NSW 2216</span>
+                </li>
+                <li class="col-md-4">
+                  <h3 class="sub-title">DIRECT</h3><span class="content-title">Nectarios Kounavis</span><a href="mailto:email@patragroup.com.au"><span class="content">email@patragroup.com.au</span></a><span class="content-title">George Kounavis</span><a href="mailto:email@patragroup.com.au"><span class="content">email@patragroup.com.au</span></a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
       <div class="footer">
