--- a/html/index.html
+++ b/html/index.html
@@ -208,7 +208,7 @@
         </div>
       </div>
       <div class="why-choose">
-        <div class="background-before"><img src="images/before-why-choose.png" height="280"></div>
+        <div class="background-before"><img src="images/before-why-choose.jpg" height="280"></div>
         <div class="container">
           <h1 class="title">why choose patra group</h1>
           <ul class="row">
@@ -226,7 +226,7 @@
             </li>
           </ul><a href="" class="read-more">read more about us</a>
         </div>
-        <div class="background-after"><img src="images/after-why-choose.png" height="143"></div>
+        <div class="background-after"><img src="images/after-why-choose.jpg" height="143"></div>
       </div>
       <div class="testimonials">
         <div class="container">
