Convert HTM/CSS Service page with Mobile version

--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
     -->
     <!-- stylesheet-->
     <link href="scss/bootstrap.min.css" type="text/css" rel="stylesheet">
-    <link href="http://cdn.jsdelivr.net/jquery.slick/1.4.1/slick.css" type="text/css" rel="stylesheet">
+    <link href="scss/slick.css" type="text/css" rel="stylesheet">
     <link href="scss/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
@@ -107,7 +107,7 @@
             </li>
             <li><a href="portfolio.html" class="scroll">portfolio</a></li>
             <li><a href="contact.html" class="scroll">contact</a></li>
-            <li><a href="" class="scroll"><i class="iconsp-35-enquire-mobile"></i><span>enquire</span></a></li>
+            <li><a class="enquire scroll"><i class="iconsp-35-enquire-mobile"></i><span>enquire</span></a></li>
           </ul>
           <div id="main-menu"><a href="index.html" class="logo"><img src="images/logo.png">
               <div class="logo-traingle"></div></a>
@@ -288,7 +288,7 @@
       </div>
     </div>
     <script src="js/jquery.min.js" type="text/javascript"></script>
-    <script src="http://cdn.jsdelivr.net/jquery.slick/1.4.1/slick.min.js" type="text/javascript"></script>
+    <script src="js/slick.min.js" type="text/javascript"></script>
     <script src="js/jquery.bxslider.min.js" type="text/javascript"></script>
     <script src="js/jquery.slicknav.min.js" type="text/javascript"></script>
     <script src="js/bootstrap.min.js" type="text/javascript"></script>
