--- a/html/contact.html
+++ b/html/contact.html
@@ -122,9 +122,7 @@
         </div>
       </div>
       <div class="contact-page other-page">
-        <div style="background-image: url('images/map-contact.jpg');" class="map-contact"><a href="#"></a>
-          <!--img(src='images/map-contact.jpg')-->
-        </div>
+        <div style="background-image: url('images/map-contact.jpg');" class="map-contact"><a href="#"></a></div>
         <div class="wrapper-contact bg-blue">
           <div class="container">
             <div class="why-choose">
