fix open service

--- a/html/services.html
+++ b/html/services.html
@@ -300,7 +300,7 @@
                     <ul class="nav nav-pills nav-stacked">
                       <li>
                         <button data-toggle="modal" data-target="#service-one-1" type="button" class="btn btn-primary btn-lg">service 1</button>
-                        <div id="#service-one-1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade">
+                        <div id="service-one-1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade">
                           <div class="modal-dialog">
                             <div class="modal-content">
                               <div class="modal-header">
@@ -312,9 +312,9 @@
                                   <li>psa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</li>
                                 </ul>
                                 <ul class="image-content">
-                                  <div id="service-one-slider-mobile" data-ride="carousel" data-interval="false" class="carousel slide">
+                                  <div id="service-one-slider-mobile-1" data-ride="carousel" data-interval="false" class="carousel slide">
                                     <ol class="carousel-indicators">
-                                      <li data-target="#service-one-slider-mobile" data-slide-to="0" class="active"></li>
+                                      <li data-target="#service-one-slider-mobile-1" data-slide-to="0" class="active"></li>
                                       <li data-target="#service-one-slider-mobile" data-slide-to="1"></li>
                                       <li data-target="#service-one-slider-mobile" data-slide-to="2"></li>
                                     </ol>
@@ -344,7 +344,7 @@
                       </li>
                       <li>
                         <button data-toggle="modal" data-target="#service-one-2" type="button" class="btn btn-primary btn-lg">service 2</button>
-                        <div id="#service-one-2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade">
+                        <div id="service-one-2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade">
                           <div class="modal-dialog">
                             <div class="modal-content">
                               <div class="modal-header">
@@ -356,9 +356,9 @@
                                   <li>psa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</li>
                                 </ul>
                                 <ul class="image-content">
-                                  <div id="service-one-slider-mobile" data-ride="carousel" data-interval="false" class="carousel slide">
+                                  <div id="service-one-slider-mobile-2" data-ride="carousel" data-interval="false" class="carousel slide">
                                     <ol class="carousel-indicators">
-                                      <li data-target="#service-one-slider-mobile" data-slide-to="0" class="active"></li>
+                                      <li data-target="#service-one-slider-mobile-2" data-slide-to="0" class="active"></li>
                                       <li data-target="#service-one-slider-mobile" data-slide-to="1"></li>
                                       <li data-target="#service-one-slider-mobile" data-slide-to="2"></li>
                                     </ol>
@@ -388,7 +388,7 @@
                       </li>
                       <li>
                         <button data-toggle="modal" data-target="#service-one-3" type="button" class="btn btn-primary btn-lg">service 3</button>
-                        <div id="#service-one-3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade">
+                        <div id="service-one-3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade">
                           <div class="modal-dialog">
                             <div class="modal-content">
                               <div class="modal-header">
@@ -400,9 +400,9 @@
                                   <li>psa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</li>
                                 </ul>
                                 <ul class="image-content">
-                                  <div id="service-one-slider-mobile" data-ride="carousel" data-interval="false" class="carousel slide">
+                                  <div id="service-one-slider-mobile-3" data-ride="carousel" data-interval="false" class="carousel slide">
                                     <ol class="carousel-indicators">
-                                      <li data-target="#service-one-slider-mobile" data-slide-to="0" class="active"></li>
+                                      <li data-target="#service-one-slider-mobile-3" data-slide-to="0" class="active"></li>
                                       <li data-target="#service-one-slider-mobile" data-slide-to="1"></li>
                                       <li data-target="#service-one-slider-mobile" data-slide-to="2"></li>
                                     </ol>
@@ -432,7 +432,7 @@
                       </li>
                       <li>
                         <button data-toggle="modal" data-target="#service-one-4" type="button" class="btn btn-primary btn-lg">service 4</button>
-                        <div id="#service-one-4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade">
+                        <div id="service-one-4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade">
                           <div class="modal-dialog">
                             <div class="modal-content">
                               <div class="modal-header">
@@ -444,9 +444,9 @@
                                   <li>psa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</li>
                                 </ul>
                                 <ul class="image-content">
-                                  <div id="service-one-slider-mobile" data-ride="carousel" data-interval="false" class="carousel slide">
+                                  <div id="service-one-slider-mobile-4" data-ride="carousel" data-interval="false" class="carousel slide">
                                     <ol class="carousel-indicators">
-                                      <li data-target="#service-one-slider-mobile" data-slide-to="0" class="active"></li>
+                                      <li data-target="#service-one-slider-mobile-4" data-slide-to="0" class="active"></li>
                                       <li data-target="#service-one-slider-mobile" data-slide-to="1"></li>
                                       <li data-target="#service-one-slider-mobile" data-slide-to="2"></li>
                                     </ol>
@@ -476,7 +476,7 @@
                       </li>
                       <li>
                         <button data-toggle="modal" data-target="#service-one-5" type="button" class="btn btn-primary btn-lg">service 5</button>
-                        <div id="#service-one-5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade">
+                        <div id="service-one-5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" class="modal fade">
                           <div class="modal-dialog">
                             <div class="modal-content">
                               <div class="modal-header">
@@ -488,9 +488,9 @@
                                   <li>psa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</li>
                                 </ul>
                                 <ul class="image-content">
-                                  <div id="service-one-slider-mobile" data-ride="carousel" data-interval="false" class="carousel slide">
+                                  <div id="service-one-slider-mobile-5" data-ride="carousel" data-interval="false" class="carousel slide">
                                     <ol class="carousel-indicators">
-                                      <li data-target="#service-one-slider-mobile" data-slide-to="0" class="active"></li>
+                                      <li data-target="#service-one-slider-mobile-5" data-slide-to="0" class="active"></li>
                                       <li data-target="#service-one-slider-mobile" data-slide-to="1"></li>
                                       <li data-target="#service-one-slider-mobile" data-slide-to="2"></li>
                                     </ol>
